MCMC_new/zero_eccentricity/2
  File "main.py", line 85
    logQ = dict(
       ^
SyntaxError: invalid syntax
